WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147737
AX: AXLoadComplete that comes before AX API access won't fire
https://bugs.webkit.org/show_bug.cgi?id=147737
Summary
AX: AXLoadComplete that comes before AX API access won't fire
Doug Russell
Reported
2015-08-06 11:54:56 PDT
If a notification, specifically AXLoadComplete, should fire, but no accessibility APIs have been accessed yet, accesssibilityEnabled() will be false and the notification won't fire.
Attachments
Patch
(4.21 KB, patch)
2015-08-06 12:04 PDT
,
Doug Russell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Doug Russell
Comment 1
2015-08-06 12:04:55 PDT
Created
attachment 258383
[details]
Patch
WebKit Commit Bot
Comment 2
2015-08-06 13:40:50 PDT
Comment on
attachment 258383
[details]
Patch Clearing flags on attachment: 258383 Committed
r188055
: <
http://trac.webkit.org/changeset/188055
>
WebKit Commit Bot
Comment 3
2015-08-06 13:40:55 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4
2015-08-06 16:48:28 PDT
This patch broke layout tests:
https://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r188057%20(16777)/results.html
Please fix.
Doug Russell
Comment 5
2015-08-06 16:59:46 PDT
(In reply to
comment #4
)
> This patch broke layout tests: >
https://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/
>
r188057
%20(16777)/results.html > > Please fix.
investigating now
Doug Russell
Comment 6
2015-08-06 19:47:49 PDT
Prepping a patch. Tracking it with
https://bugs.webkit.org/show_bug.cgi?id=147763
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug