AX: AXLoadComplete that comes before AX API access won't fire https://bugs.webkit.org/show_bug.cgi?id=147737

Patch by Doug Russell <d_russell@apple.com> on 2015-08-06
Reviewed by Chris Fleizach.

Treat setEnhancedUserInterfaceAccessibility() as AX API access and if true,
enableAccessibility().

Source/WebCore:

Test: accessibility/mac/loaded-notification.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::setEnhancedUserInterfaceAccessibility):

LayoutTests:

* accessibility/mac/loaded-notification-expected.txt: Added.
* accessibility/mac/loaded-notification.html: Added.

Canonical link: https://commits.webkit.org/165825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188055 268f45cc-cd09-0410-ab3c-d52691b4dbfc